//Потоковая передача сервера
syntax = "proto3";

option csharp_namespace = "GrpcServiceApp.Protos";

package serverMessageToClient;

service Messenger
{
	rpc ServerDataStream(RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage
{}
message ResponseMessage
{
  string content=1;
}